2014-09-25  Marek Polacek  <polacek@redhat.com>

	PR c++/61945
	* class.c (warn_hidden): Check for FUNCTION_DECL.

2014-09-25  Jakub Jelinek  <jakub@redhat.com>

	PR c++/63249
	* semantics.c (handle_omp_array_sections_1): Call mark_rvalue_use
	on low_bound and length.

2014-09-24  Aldy Hernandez  <aldyh@redhat.com>

	* class.c, decl.c, optimize.c: Rename all instances of
	DECL_ABSTRACT to DECL_ABSTRACT_P.

2014-09-24  Marek Polacek  <polacek@redhat.com>

	PR c/61405
	PR c/53874
	* semantics.c (finish_switch_cond): Call unlowered_expr_type.
	* tree.c (bot_manip): Add default case.
	* parser.c (cp_parser_primary_expression): Cast the controlling
	expression of a switch to an int.
	(cp_parser_unqualified_id): Likewise.

2014-09-23  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/61857
	* parser.c (cp_parser_skip_to_closing_square_bracket,
	cp_parser_array_designator_p): New.
	(cp_parser_initializer_list): Use the latter.

2014-09-22  Jason Merrill  <jason@redhat.com>

	* semantics.c (finish_non_static_data_member): In diagnostic, give
	error at point of use and note at point of declaration.

	PR c++/63320
	PR c++/60463
	PR c++/60755
	* lambda.c (maybe_resolve_dummy, lambda_expr_this_capture): Handle
	not finding 'this'.

2014-09-22  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/62219
	* pt.c (check_default_tmpl_args): Check LAMBDA_FUNCTION_P.

2014-09-22  Jason Merrill  <jason@redhat.com>

	* decl.c (poplevel): Don't warn about unused vars in template scope.
	* error.c (dump_decl): Handle variable templates.

2014-09-20  Jason Merrill  <jason@redhat.com>

	PR c++/62017
	* decl.c (begin_destructor_body): Only clobber the as-base part of
	*this.

2014-09-19  Jason Merrill  <jason@redhat.com>

	PR c++/61392
	* mangle.c (write_expression): Use unresolved-name mangling for
	DR850 case.

	PR c++/61465
	* call.c (convert_like_real) [ck_identity]: Call mark_rvalue_use
	after pulling out an element from a CONSTRUCTOR.

2014-09-18  Jakub Jelinek  <jakub@redhat.com>
